--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.2.6",
+    "@aws-amplify/ui-react": "^6.1.12",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
+    "@tinymce/tinymce-react": "^5.1.1",
+    "aws-amplify": "^6.3.8",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
     "@types/node": "^20",
