--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,13 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+
+.prettierignore
+prettier.config.cjs
+.idea
+
+/dynamodblocal
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
@@ -56,7 +63,3 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
-
-.prettierignore
-prettier.config.cjs
-.idea
