--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,24 +1,5 @@
 {
-  "api": {
-    "yenwebsite": {
-      "dependsOn": [],
-      "output": {
-        "authConfig": {
-          "additionalAuthenticationProviders": [],
-          "defaultAuthentication": {
-            "apiKeyConfig": {
-              "apiKeyExpirationDate": "2025-07-05T09:00:56.701Z",
-              "apiKeyExpirationDays": 365,
-              "description": ""
-            },
-            "authenticationType": "API_KEY"
-          }
-        }
-      },
-      "providerPlugin": "awscloudformation",
-      "service": "AppSync"
-    }
-  },
+  "api": {},
   "auth": {
     "yenwebsite0331ffa8": {
       "customAuth": false,
@@ -47,11 +28,5 @@
       "service": "Cognito"
     }
   },
-  "storage": {
-    "yenWebsiteStorage": {
-      "dependsOn": [],
-      "providerPlugin": "awscloudformation",
-      "service": "S3"
-    }
-  }
+  "storage": {}
 }
