--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-react": "^6.1.12",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
+    "@react-spring/web": "^9.7.5",
     "@tinymce/tinymce-react": "^5.1.1",
     "aws-amplify": "^6.3.8",
     "next": "14.2.4",
