update resume to use BE api

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@react-spring/web": "^9.7.5",
+    "@tanstack/react-query": "^5.62.7",
     "@tinymce/tinymce-react": "^5.1.1",
     "aws-amplify": "^6.3.8",
     "next": "14.2.4",
